task_2 | add moveable fp character

--- a/task_2/fntastic_project/Config/DefaultEngine.ini
+++ b/task_2/fntastic_project/Config/DefaultEngine.ini
@@ -1,10 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-
-
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/MyContent/Maps/TurtleMap.TurtleMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/MyContent/Maps/TurtleMap.TurtleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/MyContent/Blueprints/BPMyfntastic_projectGameModeBase.BPMyfntastic_projectGameModeBase_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
