--- a/task_2/fntastic_project/fntastic_project.uproject
+++ b/task_2/fntastic_project/fntastic_project.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "fntastic_project",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
