--- a/task_2/fntastic_project/Config/DefaultInput.ini
+++ b/task_2/fntastic_project/Config/DefaultInput.ini
@@ -78,6 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Interact2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="ForwardBackward",Scale=1.000000,Key=W)
